...
    
    func setIsLiked(_ isLiked: Bool) {
        let image = isLiked ? UIImage(named: "Active") : UIImage(named: "No Active")
        
        likeButton.setImage(image, for: .normal)
                
        likeButton.accessibilityIdentifier = isLiked ? "like button on" : "like button off"
    }
} 

