...
                                </subviews>
                                <viewLayoutGuide key="contentLayoutGuide" id="Qt3-W9-Jlv"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="QOy-6G-OZk"/>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IDd-ph-8NT" userLabel="Backward">
                                <rect key="frame" x="9" y="9" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Back Button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="CvM-Os-Skc"/>
                                    <constraint firstAttribute="width" constant="48" id="gH8-gA-qNu"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P2e-SL-zXo">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="f7F-ng-h8S"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
