...
    // MARK: - Private Properties
    weak var delegate: WebViewViewControllerDelegate?
    
    // MARK: - View Life Cycles
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.accessibilityIdentifier = "UnsplashWebView"
        webView.navigationDelegate = self
        presenter?.viewDidLoad()
    }
    
    // MARK: - Overrides Methods
    override func viewDidAppear(_ animated: Bool) {
...
